--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,7 +1,18 @@
 {
-    "profile": {
-      "description": "أولويتنا القصوى هي التقدم في العمر، بالطبع، دون فقدان الجاذبية والانتعاش. يجب أن يبدو مرضانا أفضل على المدى الطويل، ولكن ليس بشكل مختلف. كيف نفعل ذلك؟ عن طريق أخذهم في 'رحلة الوجه' الشخصية جدًا. فريقي وأنا نرافق الجمال طويل الأمد للمريض: بلطف ونؤكد عليه.",
-      "doctor_name": "الدكتورة نورا فؤاد"
-    }
-  }
+  "profile": {
+    "description": "دكتورة نورة فؤاد هي اختصاصية أمراض جلدية وجمال مع خبرة في علاجات العناية بالبشرة والإجراءات التجميلية. حصلت على شهادتها من جامعة عين شمس، ولديها خلفية مهنية معتمدة من المجلس العسكري المصري ودبلوم التخصص في أمراض الجلدية من غلاسكو.",
+    "doctor_name": "دكتورة نورة فؤاد"
+  },
   
+    "services": {
+      "skin_boosters": "الجلد المعزز هو حقبة جديدة من تحفيز الكولاجين والإيلاستين الخاص بك في الجلد الذي يمنحك بشرة أكثر إشراقًا ومرونة وصحة. إنها أيضًا إجراء جيد لخطة مكافحة الشيخوخة التي تحافظ على بشرتك أصغر وأكثر صحة.",
+      "face_fillers": "حقن الفيلر هي حقن حمض الهيالورونيك التي تعرف وتعطي شكلًا جديدًا وتملأ بشكل طبيعي حجمك المفقود. كما أنها تحفز كولاجين بشرتك وترفع بشرتك بشكل طبيعي.",
+      "lip_fillers": "حقن الفيلر في الشفاه هي حقن حمض الهيالورونيك التي تجدد شفاهك، وتقلل من التجاعيد والشقوق، وتعطي شكلاً جديدًا لشفاهك الطبيعية، وترطب بشرتك.",
+      "botox": "البوتوكس هو علاج سحري للخطوط الثابتة المقاومة على الجبهة وحول العينين مما يجعل بشرتك تبدو أصغر سنًا بطريقة ناعمة.",
+      "hybrid_fillers": {
+        "title": "الفيلر الهجين ",
+        "description": "رفع الوجه السائل باستخدام الكالسيوم وحمض الهيالورونيك لبشرة طبيعية ناعمة ومضيئة. زيادة الحجم الطبيعي. رفع الجلد يزداد مع مرور الأيام خلال خطة العلاج. شد البشرة وتحفيز الكولاجين بواسطة خلاياك الخاصة. الخدود، الصدغين، وفك الوجه. تقنية فيكتور لرفع قوي، وداعًا للابتسامات العميقة."
+      }
+    }
+    
+}
